Add more filtering functions, for audio_deck

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -58,6 +58,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_dirs(fname):\n",
+    "    import os\n",
+    "    dirname = os.path.dirname(fname)\n",
+    "    if not os.path.exists(dirname):\n",
+    "        os.makedirs(dirname)\n",
+    "        \n",
+    "def save_fig(fig, fname):\n",
+    "    make_dirs(fname)\n",
+    "    fig.savefig(fname, bbox_inches='tight')\n",
+    "    print('saved as', fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -133,21 +151,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    results_df\n",
-    "    print('results_df exists:')\n",
-    "except: \n",
-    "    print('new results_df')\n",
-    "    results_df = init_results_df()\n",
-    "results_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -190,12 +193,12 @@
     "chosen_dicts = [{\"appendix\":\"\", \"degree\": 0, \"distance\":10, \"motors\":0}]\n",
     "#chosen_dicts = [{\"appendix\":\"\", \"snr\": 1, \"degree\": 0, \"distance\":10, \"motors\":0}]\n",
     "df_mic_types = filter_by_dicts(df_freq, chosen_dicts)\n",
-    "n_spurious = 5\n",
+    "n_spurious = 2\n",
     "\n",
     "fig_bins, ax_bins = plt.subplots()\n",
     "\n",
     "for j, (i_row, row) in enumerate(df_mic_types.iterrows()):\n",
-    "    if row.mic_type == 'measurement' and row.snr == 1: # this is no \"real snr\"\n",
+    "    if (row.mic_type == 'measurement') and (row.snr == 1): # this is no \"real snr\"\n",
     "        continue\n",
     "        \n",
     "    # processing\n",
@@ -232,9 +235,108 @@
     "ax_bins.plot([], [], color=f'C0', ls='-', label='sweep')\n",
     "ax_bins.set_xlabel('frequency [Hz]')\n",
     "ax_bins.legend(loc='lower left', bbox_to_anchor=[1.0, 0.0])\n",
-    "ax_bins.set_xlim(2000, 5000)\n",
+    "ax_bins.set_xlim(1500, 5000)\n",
     "ax_bins.set_yticks([])\n",
     "pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 0. Debug parsing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "n_distances = 3; i = 0\n",
+    "#filter_dict = {'mic_type':'audio_deck', 'snr':1, 'motors':0}; mic_idx = 3\n",
+    "#filter_dict = {'mic_type':'audio_deck', 'snr':0, 'motors':0}; mic_idx = 3\n",
+    "filter_dict = {'mic_type':'measurement', 'snr':0, 'motors':0}; mic_idx = 0\n",
+    "df_mic = filter_by_dicts(df_freq, [filter_dict])\n",
+    "\n",
+    "wall_detector = WallDetector(exp_name=exp_name, mic_type=filter_dict['mic_type'])\n",
+    "\n",
+    "for distance, df_this in df_mic.groupby('distance'):\n",
+    "    if len(df_this) != 1: \n",
+    "        print(f\"{len(df_this)} findings for {distance, filter_dict}\")\n",
+    "        continue\n",
+    "\n",
+    "    row = df_this.iloc[0]\n",
+    "    spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.pcolorfast(row.seconds, freqs_masked, np.log10(spec_masked_all[:-1, mic_idx, :-1]))\n",
+    "    ax.set_title(f'distance={distance}cm')\n",
+    "    \n",
+    "    i += 1\n",
+    "    if i >= n_distances:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "n_spurious = 2\n",
+    "wall_detector.remove_spurious_freqs(n_spurious, verbose=False, dryrun=False)\n",
+    "wall_detector.remove_bad_freqs(mag_thresh=1e-3, std_thresh=1, verbose=False, dryrun=False)\n",
+    "\n",
+    "df_matrix, distances, frequencies = wall_detector.get_df_matrix()\n",
+    "df_matrix_std, distances, frequencies = wall_detector.get_df_matrix(method=np.nanstd)\n",
+    "\n",
+    "print(distances)\n",
+    "\n",
+    "# was only here to test that both give the same\n",
+    "#df_matrix_old, distances_old, frequencies_old = wall_detector.get_df_matrix_old()\n",
+    "\n",
+    "df_sub = wall_detector.df\n",
+    "df_sub = df_sub[(df_sub.mic==mic_idx)]\n",
+    "\n",
+    "fig_all, ax_all = plt.subplots()\n",
+    "fig_all.set_size_inches(10, 5)\n",
+    "print(df_matrix.shape)\n",
+    "for i, distance in enumerate(distances):\n",
+    "    df_plot = df_sub.loc[df_sub.distance==distance]\n",
+    "    if len(df_plot) == 0:\n",
+    "        continue\n",
+    "    fig = plt.figure()\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    sns.scatterplot(data=df_plot, x='frequency', y='magnitude', hue='counter', linewidth=0, palette='inferno')\n",
+    "    plt.errorbar(frequencies, df_matrix[mic_idx, :, i], df_matrix_std[mic_idx, :, i])\n",
+    "    plt.xlim(1500, 4500)\n",
+    "    plt.title(f'distance {distance:.0f}cm, mic{mic_idx}')\n",
+    "    plt.yscale('log')\n",
+    "    #plt.ylim(1e-3, 50)\n",
+    "    plt.xlabel('frequency [Hz]')\n",
+    "    plt.ylabel('amplitude')\n",
+    "    \n",
+    "    fname = f'results/{exp_name}/{filter_dict[\"mic_type\"]}_{distance:.0f}_snr{filter_dict[\"snr\"]}.png'\n",
+    "    save_fig(fig, fname)\n",
+    "    \n",
+    "    ax_all.errorbar(frequencies, df_matrix[mic_idx, :, i], df_matrix_std[mic_idx, :, i], label=f'{distance}cm')\n",
+    "ax_all.legend()\n",
+    "ax_all.set_yscale('log')\n",
+    "ax_all.set_ylim(1e-3, 50)\n",
+    "ax_all.set_xlim(1500, 4500)\n",
+    "ax_all.set_xlabel('frequency [Hz]')\n",
+    "ax_all.set_ylabel('amplitude')\n",
+    "fname = f'results/{exp_name}/{filter_dict[\"mic_type\"]}_snr{filter_dict[\"snr\"]}.png'\n",
+    "save_fig(fig_all, fname)\n",
+    "#wall_detector.remove_spurious_freqs(n_spurious, verbose=True)\n",
+    "#df_amp, distances, frequencies = wall_detector.get_df_matrix()"
    ]
   },
   {
@@ -248,13 +350,12 @@
     "import progressbar\n",
     "from pandas_utils import fill_df\n",
     "    \n",
-    "filters = ['mic_type', 'snr', 'motors']\n",
+    "FILTERS = ['mic_type', 'snr', 'motors']\n",
     "\n",
-    "def parse_wall_experiments(df_freq, max_distance=None):\n",
+    "def parse_wall_experiments(df_freq, max_distance=None, plot=False):\n",
     "    results_df = init_results_df()\n",
-    "    for chosen_tuple, df_mic in df_freq.groupby(filters, sort=False):\n",
-    "            \n",
-    "        filter_dict = dict(zip(filters, chosen_tuple))\n",
+    "    for chosen_tuple, df_mic in df_freq.groupby(FILTERS, sort=False):\n",
+    "        filter_dict = dict(zip(FILTERS, chosen_tuple))\n",
     "\n",
     "        wall_detector = WallDetector(exp_name=exp_name, mic_type=filter_dict['mic_type'])\n",
     "\n",
@@ -264,7 +365,8 @@
     "            continue\n",
     "\n",
     "        d_idx = 0\n",
-    "        with progressbar.ProgressBar(max_value=len(df_mic)) as p:\n",
+    "        max_value = max_distance if max_distance is not None else len(df_mic)\n",
+    "        with progressbar.ProgressBar(max_value=max_value) as p:\n",
     "            for distance, df_this in df_mic.groupby('distance'):\n",
     "                if len(df_this) != 1: \n",
     "                    print(f\"{len(df_this)} findings for {distance, filter_dict}\")\n",
@@ -275,7 +377,14 @@
     "                row = df_this.iloc[0]\n",
     "                spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
     "                p.update(d_idx); d_idx += 1\n",
+    "                \n",
+    "                if plot:\n",
+    "                    fig, ax = plt.subplots()\n",
+    "                    ax.pcolorfast(range(spec_masked_all.shape[-1]), freqs_masked, np.log10(spec_masked_all[:, 0, :]))\n",
+    "                    ax.set_title(f'distance={distance}cm')\n",
+    "                \n",
     "        wall_detector.remove_spurious_freqs(n_spurious, verbose=False)\n",
+    "        wall_detector.remove_bad_freqs(mag_thresh=1e-3, std_thresh=1, verbose=False, dryrun=False)\n",
     "\n",
     "        df_amp, distances, frequencies = wall_detector.get_df_matrix()\n",
     "        #df_std, *_ = wall_detector.get_df_matrix(method=normalized_std)\n",
@@ -286,6 +395,7 @@
     "        fill_dict = {'df_dist':distances, \n",
     "                     'df_freq': frequencies,\n",
     "                     'df_matrix': df_amp}\n",
+    "        print('filling results_df...')\n",
     "        results_df = fill_df(results_df, filter_dict, fill_dict)\n",
     "    return results_df"
    ]
@@ -304,6 +414,7 @@
    "outputs": [],
    "source": [
     "fname = 'results/wall_analysis.pkl'\n",
+    "#method = 'dryrun'\n",
     "#method = 'new'\n",
     "#method = 'replace'\n",
     "method = 'read'\n",
@@ -311,29 +422,54 @@
     "if method == 'read': \n",
     "    results_df = pd.read_pickle(fname)\n",
     "elif method == 'replace':\n",
-    "    results_df_old = pd.read_pickle(fname)\n",
+    "    results_df = pd.read_pickle(fname)\n",
     "    \n",
     "    print('read', fname)\n",
-    "    results_df = parse_wall_experiments(df_freq)\n",
+    "    results_df_new = parse_wall_experiments(df_freq)\n",
     "    \n",
-    "    for chosen_tuple, df in results_df_old.groupby(filters):\n",
-    "        filter_dict = dict(zip(filters, chosen_tuple))\n",
-    "        filter_dict.update({'exp_name': exp_name})\n",
+    "    for chosen_tuple, df in results_df_new.groupby(FILTERS):\n",
     "        assert len(df) == 1\n",
     "        row = df.iloc[0]\n",
+    "        \n",
+    "        filter_dict = dict(zip(FILTERS, chosen_tuple))\n",
+    "        filter_dict.update({'exp_name': exp_name})\n",
     "        fill_dict = {'df_dist': row.df_dist, \n",
     "                     'df_freq': row.df_freq,\n",
     "                     'df_matrix': row.df_matrix}\n",
+    "        print('filling results_df_old...')\n",
     "        results_df = fill_df(results_df, filter_dict, fill_dict)\n",
-    "        print('appended row')\n",
     "    pd.to_pickle(results_df, fname)\n",
     "    print('saved as', fname)\n",
     "elif method == 'new':\n",
     "    results_df = parse_wall_experiments(df_freq)\n",
     "    pd.to_pickle(results_df, fname)\n",
     "    print('saved as', fname)\n",
-    "    \n",
+    "elif method == 'dryrun':\n",
+    "    results_df = parse_wall_experiments(df_freq, max_distance=10, plot=True)\n",
     "results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_dict = dict(\n",
+    "    exp_name = '2020_11_26_wall',\n",
+    "    motors = 0,\n",
+    "    snr = 0,\n",
+    "    mic_type = 'measurement'\n",
+    ")\n",
+    "if (filter_dict['mic_type'] == 'measurement'):\n",
+    "    # only one channel: chosen_mics = [1]\n",
+    "    channel_to_mic_mapping = {0: 1}\n",
+    "    chosen_mics = [0]\n",
+    "else:\n",
+    "    channel_to_mic_mapping = {i:i for i in range(4)}\n",
+    "    chosen_mics = [3, 4]\n",
+    "row = filter_by_dicts(results_df, [filter_dict]).iloc[0]\n",
+    "row"
    ]
   },
   {
@@ -361,17 +497,15 @@
     "from wall_detector import normalize_df_matrix\n",
     "from copy import deepcopy\n",
     "from simulation import get_df_theory\n",
+    "min_freq = 2000\n",
+    "max_freq = 4800\n",
     "\n",
-    "row = results_df.iloc[1]; chosen_mics = [1]\n",
-    "#row = results_df.iloc[1]; chosen_mics = range(4)\n",
-    "min_freq = 2100\n",
-    "max_freq = 4000\n",
-    "\n",
-    "plot_mic_idx = 0\n",
+    "plot_channel_idx = 0\n",
     "\n",
     "calib_function = get_calibration_function(plot=True)\n",
-    "df_theory = get_df_theory(row.df_freq, row.df_dist, chosen_mics=chosen_mics) \n",
-    "print(df_theory.shape)\n",
+    "\n",
+    "mics = list(channel_to_mic_mapping.values())\n",
+    "df_theory = get_df_theory(row.df_freq, row.df_dist, chosen_mics=mics) \n",
     "\n",
     "results = pd.DataFrame(columns=['normalization', 'data_type', 'matrix'])\n",
     "\n",
@@ -385,20 +519,22 @@
     "for j, (key, method) in enumerate(method_dict.items()):\n",
     "    \n",
     "    for df_matrix, data_type in zip([row.df_matrix, df_theory], ['experimental', 'theoretical']): \n",
+    "        \n",
+    "        df_matrix = df_matrix[chosen_mics]\n",
     "        if key not in ['raw', 'theoretical']:\n",
     "            df_norm, values = normalize_df_matrix(df_matrix=df_matrix, \n",
     "                                          freqs=row.df_freq, method=method)\n",
     "            label = f'{key}, {data_type}'\n",
     "            \n",
     "            if data_type == 'theoretical':\n",
-    "                ax.plot(row.df_freq, values[plot_mic_idx], color=f'C{j}', ls=':')\n",
+    "                ax.plot(row.df_freq, values[plot_channel_idx], color=f'C{j}', ls=':')\n",
     "            else:\n",
-    "                ax.plot(row.df_freq, values[plot_mic_idx], label=label, color=f'C{j}')\n",
+    "                ax.plot(row.df_freq, values[plot_channel_idx], label=label, color=f'C{j}')\n",
     "            \n",
     "        elif key == 'raw':\n",
     "            df_norm = deepcopy(df_matrix)\n",
     "        elif key == 'theoretical':\n",
-    "            df_norm = deepcopy(df_theory)\n",
+    "            df_norm = deepcopy(df_theory[chosen_mics])\n",
     "\n",
     "        normalize_dict[key] = df_norm\n",
     "\n",
@@ -411,16 +547,16 @@
     "ax.set_yscale('log')\n",
     "ax.set_ylim(1e-3, 1e2)\n",
     "ax.set_xlim(min_freq, max_freq)\n",
-    "ax.set_title(f'calibration values for mic {chosen_mics[plot_mic_idx]}')\n",
+    "ax.set_title(f'calibration values for mic {chosen_mics[plot_channel_idx]}')\n",
     "ax.legend()\n",
     "\n",
     "min_value = None\n",
-    "max_value = None\n",
+    "max_value = 3 #None\n",
     "\n",
     "for normalization, df in results.groupby('normalization', sort=False):\n",
     "    assert len(df) == 2\n",
-    "    df_exp = df.loc[df.data_type=='experimental'].iloc[0].matrix[plot_mic_idx]\n",
-    "    df_the = df.loc[df.data_type=='theoretical'].iloc[0].matrix[plot_mic_idx]\n",
+    "    df_exp = df.loc[df.data_type=='experimental'].iloc[0].matrix[plot_channel_idx]\n",
+    "    df_the = df.loc[df.data_type=='theoretical'].iloc[0].matrix[plot_channel_idx]\n",
     "    rel_error = np.log10(np.abs(df_exp - df_the) / np.abs(df_the)) \n",
     "    \n",
     "    fig, axs = plt.subplots(1, 3, squeeze=False, sharey=True)\n",
@@ -441,8 +577,7 @@
     "    \n",
     "#print(np.nanmin(row.df_matrix), np.nanmax(row.df_matrix))\n",
     "#print(row.df_matrix.shape)\n",
-    "#print(row.df_matrix[0, :, 0])\n",
-    "results"
+    "#print(row.df_matrix[0, :, 0])"
    ]
   },
   {
@@ -501,9 +636,9 @@
    "source": [
     "from simulation import get_freq_slice_theory\n",
     "\n",
-    "distances_grid = range(30)\n",
-    "method_slice = ''\n",
-    "#method_slice = 'standardize' \n",
+    "distances_grid = range(20)\n",
+    "#method_slice = ''\n",
+    "method_slice = 'standardize' \n",
     "\n",
     "chosen_methods = ['raw', 'calibration-online', 'standardize', 'theoretical'] \n",
     "#chosen_methods = ['raw', 'standardize', 'theoretical'] \n",
@@ -543,7 +678,7 @@
     "            # TODO(FD)can normalize slices here if we want...\n",
     "            slice_the_here = normalize_slice(slice_the_here, method_slice)\n",
     "            \n",
-    "            assert slice_the_here.shape == slice_exp.shape\n",
+    "            assert slice_the_here.shape == slice_exp.shape, (slice_the_here.shape, slice_exp.shape)\n",
     "            cost = cost_function(slice_the_here, slice_exp, row.df_freq, min_freq=min_freq, max_freq=max_freq)\n",
     "            costs.append(cost)\n",
     "            \n",
@@ -552,11 +687,11 @@
     "        d_est_idx = np.argmin(costs)\n",
     "        d_est = distances_grid[d_est_idx]\n",
     "        absolute_err_dict[method].append(abs(d_est - distance))\n",
-    "            \n",
+    "        \n",
     "        # plotting\n",
     "        for i_mic, mic in enumerate(chosen_mics): \n",
-    "            axs[0, i_mic].plot(row.df_freq, slice_exp[i], label=method, color=f'C{i_method}')\n",
-    "            axs[0, i_mic].plot(row.df_freq, slice_the[i], color=f'C{i_method}', ls=':')\n",
+    "            axs[0, i_mic].plot(row.df_freq, slice_exp[mic], label=method, color=f'C{i_method}')\n",
+    "            axs[0, i_mic].plot(row.df_freq, slice_the[mic], color=f'C{i_method}', ls=':')\n",
     "            axs[0, i_mic].set_xlim(min_freq, max_freq)\n",
     "            #axs[0, i_mic].set_yscale('log')\n",
     "            axs[0, i_mic].set_ylim(None, 4)\n",
@@ -608,13 +743,6 @@
     "axs[0, 1].grid(which='both')\n",
     "axs[0, 1].legend(loc='lower right')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1097,8 +1225,8 @@
     "from evaluate_data import read_df, integrate_yaw\n",
     "from dynamic_analysis import add_pose_to_df\n",
     "\n",
-    "#exp_name = '2020_11_26_wall'; \n",
-    "exp_name = '2020_12_9_rotating'; \n",
+    "exp_name = '2020_11_26_wall'; \n",
+    "#exp_name = '2020_12_9_rotating'; \n",
     "\n",
     "fname = f'results/{exp_name}_real.pkl'\n",
     "\n",
@@ -1121,10 +1249,11 @@
     "from wall_detector import WallDetector\n",
     "import progressbar\n",
     "\n",
-    "#mic_type = 'measurement'; \n",
-    "mic_type = 'audio_deck'; \n",
+    "mic_type = 'measurement'; \n",
+    "#mic_type = 'audio_deck'; \n",
     "motors = 0\n",
     "snr = 0\n",
+    "\n",
     "wall_detector = WallDetector(exp_name=exp_name, mic_type=mic_type)\n",
     "\n",
     "try: \n",
@@ -1145,7 +1274,7 @@
     "                ax = None\n",
     "\n",
     "            p.update(i)\n",
-    "    #wall_detector.backup(exp_name, mic_type)"
+    "    wall_detector.backup(exp_name, mic_type)"
    ]
   },
   {
@@ -1154,7 +1283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wall_detector.remove_spurious_freqs(n_spurious=1)\n",
+    "wall_detector.remove_spurious_freqs(n_spurious=2, verbose=True)\n",
     "\n",
     "mic_idx = 0\n",
     "f_slices, freqs = wall_detector.get_frequency_slice(distance=1, max_freq=4500, min_freq=2000)\n",
@@ -1169,7 +1298,6 @@
    "outputs": [],
    "source": [
     "d_slices, distances = wall_detector.get_distance_slice(frequency=1125)\n",
-    "print(distances)\n",
     "plt.figure()\n",
     "plt.plot(distances, d_slices[mic_idx])"
    ]
@@ -1199,7 +1327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index in range(len(frequencies)):\n",
+    "for index in np.arange(len(frequencies))[::3]:\n",
     "    plt.semilogy(df_matrix_mics[0, index, :], label=frequencies[index])\n",
     "plt.legend()"
    ]
@@ -1282,7 +1410,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
