Add evaluation with audio_deck mics

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -70,7 +70,14 @@
     "def save_fig(fig, fname):\n",
     "    make_dirs(fname)\n",
     "    fig.savefig(fname, bbox_inches='tight')\n",
-    "    print('saved as', fname)"
+    "    print('saved as', fname)\n",
+    "    \n",
+    "def add_colorbar(ax, im):\n",
+    "    from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
+    "    divider = make_axes_locatable(ax)\n",
+    "    cax = divider.append_axes('right', size='5%', pad=0.05)\n",
+    "    fig.colorbar(im, cax=cax, orientation='vertical');\n",
+    "    "
    ]
   },
   {
@@ -459,7 +466,7 @@
     "    exp_name = '2020_11_26_wall',\n",
     "    motors = 0,\n",
     "    snr = 0,\n",
-    "    mic_type = 'measurement'\n",
+    "    mic_type = 'audio_deck', #'measurement'\n",
     ")\n",
     "if (filter_dict['mic_type'] == 'measurement'):\n",
     "    # only one channel: chosen_mics = [1]\n",
@@ -467,7 +474,7 @@
     "    chosen_mics = [0]\n",
     "else:\n",
     "    channel_to_mic_mapping = {i:i for i in range(4)}\n",
-    "    chosen_mics = [3, 4]\n",
+    "    chosen_mics = [3]\n",
     "row = filter_by_dicts(results_df, [filter_dict]).iloc[0]\n",
     "row"
    ]
@@ -476,7 +483,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Choose normalization scheme"
+    "# 2. Choose normalization scheme\n",
+    "\n",
+    "# TODO\n",
+    "\n",
+    "* fix calibration_offline scheme: here we should compare to a different theoretical distribution! \n",
+    "* add cosine cost function to calibrations\n",
+    "* choose frequency bins based on std\n",
+    "* add plots of \"ambiguous\" frequencies"
    ]
   },
   {
@@ -487,12 +501,6 @@
    },
    "outputs": [],
    "source": [
-    "def add_colorbar(ax, im):\n",
-    "    from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
-    "    divider = make_axes_locatable(ax)\n",
-    "    cax = divider.append_axes('right', size='5%', pad=0.05)\n",
-    "    fig.colorbar(im, cax=cax, orientation='vertical');\n",
-    "    \n",
     "from calibration import get_calibration_function\n",
     "from wall_detector import normalize_df_matrix\n",
     "from copy import deepcopy\n",
@@ -640,9 +648,9 @@
     "#method_slice = ''\n",
     "method_slice = 'standardize' \n",
     "\n",
-    "chosen_methods = ['raw', 'calibration-online', 'standardize', 'theoretical'] \n",
+    "#chosen_methods = ['raw', 'calibration-online', 'standardize', 'theoretical'] \n",
     "#chosen_methods = ['raw', 'standardize', 'theoretical'] \n",
-    "#chosen_methods = results.normalization.unique() \n",
+    "chosen_methods = results.normalization.unique() \n",
     "\n",
     "absolute_err_dict = {method:[] for method in chosen_methods}\n",
     "\n",
@@ -690,8 +698,8 @@
     "        \n",
     "        # plotting\n",
     "        for i_mic, mic in enumerate(chosen_mics): \n",
-    "            axs[0, i_mic].plot(row.df_freq, slice_exp[mic], label=method, color=f'C{i_method}')\n",
-    "            axs[0, i_mic].plot(row.df_freq, slice_the[mic], color=f'C{i_method}', ls=':')\n",
+    "            axs[0, i_mic].plot(row.df_freq, slice_exp[i_mic], label=method, color=f'C{i_method}')\n",
+    "            axs[0, i_mic].plot(row.df_freq, slice_the[i_mic], color=f'C{i_method}', ls=':')\n",
     "            axs[0, i_mic].set_xlim(min_freq, max_freq)\n",
     "            #axs[0, i_mic].set_yscale('log')\n",
     "            axs[0, i_mic].set_ylim(None, 4)\n",
