Saving plots of performance

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -462,18 +462,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#mic_type = 'measurement'\n",
+    "mic_type = 'audio_deck'\n",
+    "snr = 1\n",
+    "#exp_name = '2020_11_26_wall'\n",
+    "exp_name = '2020_12_9_rotating'\n",
+    "\n",
     "filter_dict = dict(\n",
-    "    exp_name = '2020_11_26_wall',\n",
+    "    exp_name = exp_name,\n",
     "    motors = 0,\n",
-    "    snr = 0,\n",
-    "    mic_type = 'audio_deck', #'measurement'\n",
+    "    snr = snr,\n",
+    "    mic_type = mic_type,\n",
     ")\n",
     "if (filter_dict['mic_type'] == 'measurement'):\n",
     "    # only one channel: chosen_mics = [1]\n",
-    "    channel_to_mic_mapping = {0: 1}\n",
+    "    channel_to_mic_mapping = [1]\n",
     "    chosen_mics = [0]\n",
     "else:\n",
-    "    channel_to_mic_mapping = {i:i for i in range(4)}\n",
+    "    channel_to_mic_mapping = range(4)\n",
     "    chosen_mics = [3]\n",
     "row = filter_by_dicts(results_df, [filter_dict]).iloc[0]\n",
     "row"
@@ -489,8 +495,9 @@
     "\n",
     "* fix calibration_offline scheme: here we should compare to a different theoretical distribution! \n",
     "* add cosine cost function to calibrations\n",
-    "* choose frequency bins based on std\n",
-    "* add plots of \"ambiguous\" frequencies"
+    "* choose frequency bins based on std or distance slice performance\n",
+    "* add plots of \"ambiguous\" frequencies\n",
+    "* understand why snr on does not seem to help"
    ]
   },
   {
@@ -505,15 +512,14 @@
     "from wall_detector import normalize_df_matrix\n",
     "from copy import deepcopy\n",
     "from simulation import get_df_theory\n",
-    "min_freq = 2000\n",
+    "min_freq = 1500\n",
     "max_freq = 4800\n",
     "\n",
     "plot_channel_idx = 0\n",
     "\n",
     "calib_function = get_calibration_function(plot=True)\n",
     "\n",
-    "mics = list(channel_to_mic_mapping.values())\n",
-    "df_theory = get_df_theory(row.df_freq, row.df_dist, chosen_mics=mics) \n",
+    "df_theory = get_df_theory(row.df_freq, row.df_dist, chosen_mics=channel_to_mic_mapping) \n",
     "\n",
     "results = pd.DataFrame(columns=['normalization', 'data_type', 'matrix'])\n",
     "\n",
@@ -644,20 +650,21 @@
    "source": [
     "from simulation import get_freq_slice_theory\n",
     "\n",
-    "distances_grid = range(20)\n",
+    "max_distance = 50\n",
+    "distances_all = row.df_dist\n",
+    "distances_grid = distances_all[distances_all <= max_distance]\n",
     "#method_slice = ''\n",
     "method_slice = 'standardize' \n",
     "\n",
-    "#chosen_methods = ['raw', 'calibration-online', 'standardize', 'theoretical'] \n",
+    "chosen_methods = ['raw', 'calibration-online', 'standardize', 'theoretical'] \n",
     "#chosen_methods = ['raw', 'standardize', 'theoretical'] \n",
-    "chosen_methods = results.normalization.unique() \n",
+    "#chosen_methods = results.normalization.unique() \n",
     "\n",
     "absolute_err_dict = {method:[] for method in chosen_methods}\n",
     "\n",
     "distances = row.df_dist[row.df_dist < max(distances_grid)]\n",
     "for i_d, distance in enumerate(distances):\n",
     "    fig, axs = plt.subplots(1, len(chosen_mics), squeeze=False)\n",
-    "        \n",
     "    fig_cost, ax_cost = plt.subplots()\n",
     "    \n",
     "    for i_method, (method, df) in enumerate(results.groupby('normalization', sort=False)):\n",
@@ -699,10 +706,10 @@
     "        # plotting\n",
     "        for i_mic, mic in enumerate(chosen_mics): \n",
     "            axs[0, i_mic].plot(row.df_freq, slice_exp[i_mic], label=method, color=f'C{i_method}')\n",
-    "            axs[0, i_mic].plot(row.df_freq, slice_the[i_mic], color=f'C{i_method}', ls=':')\n",
+    "            #axs[0, i_mic].plot(row.df_freq, slice_the[i_mic], color=f'C{i_method}', ls=':')\n",
     "            axs[0, i_mic].set_xlim(min_freq, max_freq)\n",
     "            #axs[0, i_mic].set_yscale('log')\n",
-    "            axs[0, i_mic].set_ylim(None, 4)\n",
+    "            axs[0, i_mic].set_ylim(-3, 3)\n",
     "            axs[0, i_mic].set_xlabel('frequency [Hz]')\n",
     "            axs[0, i_mic].set_ylabel('amplitude')\n",
     "            axs[0, i_mic].set_title(f'slices for distance {distance:.0f}cm, mic{mic}')\n",
@@ -715,7 +722,13 @@
     "        ax_cost.set_title(f'cost for distance {distance:.0f}cm')\n",
     "        \n",
     "    [axs[0, i_mic].legend(loc='upper left') for i_mic in range(len(chosen_mics))]\n",
-    "    ax_cost.legend(loc='upper right')"
+    "    ax_cost.legend(loc='upper right')\n",
+    "    \n",
+    "    fname = f'results/{exp_name}/slice_{mic_type}_{distance:.0f}_snr{snr}.png'\n",
+    "    save_fig(fig, fname)\n",
+    "    \n",
+    "    fname = f'results/{exp_name}/cost_{mic_type}_{distance:.0f}_snr{snr}.png'\n",
+    "    save_fig(fig_cost, fname)"
    ]
   },
   {
@@ -731,14 +744,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from matplotlib.lines import Line2D\n",
+    "markers = list(Line2D.markers.keys()); i = 0\n",
+    "\n",
     "fig, axs = plt.subplots(1, 2, squeeze=False)\n",
     "fig.set_size_inches(15, 5)\n",
     "for method, absolute_errors in absolute_err_dict.items():\n",
-    "    axs[0, 0].plot(distances, absolute_errors, label=method, marker='o')\n",
+    "    axs[0, 0].plot(distances, absolute_errors, label=method, marker=markers[i], ls=':')\n",
     "    \n",
     "    xvals = sorted(absolute_errors)\n",
     "    yvals = np.linspace(0, 1, len(xvals))\n",
-    "    axs[0, 1].plot(xvals, yvals, label=method, marker='o')\n",
+    "    axs[0, 1].plot(xvals, yvals, label=method, marker=markers[i], ls=':')\n",
+    "    i += 1\n",
     "    \n",
     "#axs[0, 0].set_yscale('log')\n",
     "axs[0, 0].set_ylabel('absolute error [cm]')\n",
@@ -749,7 +766,11 @@
     "axs[0, 1].set_xlabel('absolute error [cm]')\n",
     "axs[0, 1].set_xlim(-1, max(distances))\n",
     "axs[0, 1].grid(which='both')\n",
-    "axs[0, 1].legend(loc='lower right')"
+    "axs[0, 1].legend(loc='lower right')\n",
+    "\n",
+    "\n",
+    "fname = f'results/{exp_name}/performance_{mic_type}_snr{snr}.png'\n",
+    "save_fig(fig, fname)"
    ]
   },
   {
