Implement finer distance sweep

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -462,9 +462,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mic_type = 'measurement'\n",
-    "mic_type = 'audio_deck'\n",
-    "snr = 1\n",
+    "mic_type = 'measurement'\n",
+    "#mic_type = 'audio_deck'\n",
+    "snr = 0\n",
     "#exp_name = '2020_11_26_wall'\n",
     "exp_name = '2020_12_9_rotating'\n",
     "\n",
@@ -493,11 +493,17 @@
     "\n",
     "# TODO\n",
     "\n",
-    "* fix calibration_offline scheme: here we should compare to a different theoretical distribution! \n",
-    "* add cosine cost function to calibrations\n",
-    "* choose frequency bins based on std or distance slice performance\n",
-    "* add plots of \"ambiguous\" frequencies\n",
-    "* understand why snr on does not seem to help"
+    "[x] fix calibration_offline scheme: here we should compare to a different theoretical distribution! \n",
+    "\n",
+    "[x] add cosine cost function to calibrations\n",
+    "\n",
+    "[ ] implement \"offline calibration\" for measurement mics\n",
+    "\n",
+    "[ ] choose frequency bins based on std or distance slice performance\n",
+    "\n",
+    "[ ] add plots of \"ambiguous\" frequencies\n",
+    "\n",
+    "[ ] understand why snr on does not seem to help"
    ]
   },
   {
@@ -519,12 +525,20 @@
     "\n",
     "calib_function = get_calibration_function(plot=True)\n",
     "\n",
-    "df_theory = get_df_theory(row.df_freq, row.df_dist, chosen_mics=channel_to_mic_mapping) \n",
+    "max_distance = 50\n",
+    "distances_grid = np.arange(1, max_distance+1)\n",
+    "distances_idx = np.where(distances_grid[:, None] == row.df_dist[None, :])[0]\n",
+    "\n",
+    "print(distances_idx)\n",
+    "np.testing.assert_allclose(distances_grid[distances_idx], row.df_dist)\n",
+    "\n",
+    "df_theory = get_df_theory(row.df_freq, distances_grid, chosen_mics=channel_to_mic_mapping) \n",
+    "print(df_theory.shape)\n",
     "\n",
     "results = pd.DataFrame(columns=['normalization', 'data_type', 'matrix'])\n",
     "\n",
-    "method_dict = dict(zip(['raw', 'calibration-offline', 'calibration-online', 'standardize', 'zero_mean', 'theoretical'], \n",
-    "                       ['', calib_function, 'calibration-online', 'standardize', 'zero_mean', 'theoretical']))\n",
+    "method_dict = dict(zip(['raw', 'normalize', 'calibration-offline', 'calibration-online', 'standardize', 'zero_mean', 'theoretical'], \n",
+    "                       ['', 'normalize', calib_function, 'calibration-online', 'standardize', 'zero_mean', 'theoretical']))\n",
     "normalize_dict = {}\n",
     "\n",
     "fig, ax = plt.subplots()\n",
@@ -536,19 +550,27 @@
     "        \n",
     "        df_matrix = df_matrix[chosen_mics]\n",
     "        if key not in ['raw', 'theoretical']:\n",
-    "            df_norm, values = normalize_df_matrix(df_matrix=df_matrix, \n",
-    "                                          freqs=row.df_freq, method=method)\n",
-    "            label = f'{key}, {data_type}'\n",
     "            \n",
+    "            # in this case, we want to compare to the theoretical distribution with average \n",
+    "            # gain equal to one (that is what we calibrate for)\n",
+    "            if (key == 'calibration-offline') and (data_type == 'theoretical'):\n",
+    "                df_norm, values = normalize_df_matrix(df_matrix=df_matrix, \n",
+    "                                              freqs=row.df_freq, method='calibration-online')\n",
+    "            else:\n",
+    "                df_norm, values = normalize_df_matrix(df_matrix=df_matrix, \n",
+    "                                              freqs=row.df_freq, method=method)\n",
     "            if data_type == 'theoretical':\n",
     "                ax.plot(row.df_freq, values[plot_channel_idx], color=f'C{j}', ls=':')\n",
     "            else:\n",
-    "                ax.plot(row.df_freq, values[plot_channel_idx], label=label, color=f'C{j}')\n",
+    "                ax.plot(row.df_freq, values[plot_channel_idx], label=f'{key}, {data_type}', color=f'C{j}')\n",
     "            \n",
     "        elif key == 'raw':\n",
     "            df_norm = deepcopy(df_matrix)\n",
     "        elif key == 'theoretical':\n",
-    "            df_norm = deepcopy(df_theory[chosen_mics])\n",
+    "            if data_type == 'experimental':\n",
+    "                df_norm = deepcopy(df_theory[chosen_mics][..., distances_idx])\n",
+    "            else:\n",
+    "                df_norm = deepcopy(df_theory[chosen_mics][..., :])\n",
     "\n",
     "        normalize_dict[key] = df_norm\n",
     "\n",
@@ -557,6 +579,7 @@
     "            'data_type': data_type,\n",
     "            'matrix': df_norm\n",
     "        }\n",
+    "        print(key, data_type, df_norm.shape)\n",
     "        \n",
     "ax.set_yscale('log')\n",
     "ax.set_ylim(1e-3, 1e2)\n",
@@ -571,18 +594,21 @@
     "    assert len(df) == 2\n",
     "    df_exp = df.loc[df.data_type=='experimental'].iloc[0].matrix[plot_channel_idx]\n",
     "    df_the = df.loc[df.data_type=='theoretical'].iloc[0].matrix[plot_channel_idx]\n",
-    "    rel_error = np.log10(np.abs(df_exp - df_the) / np.abs(df_the)) \n",
+    "    rel_error = np.log10(np.abs(df_exp - df_the[:, distances_idx]) / np.abs(df_the[:, distances_idx])) \n",
     "    \n",
-    "    fig, axs = plt.subplots(1, 3, squeeze=False, sharey=True)\n",
-    "    fig.set_size_inches(15, 5)\n",
+    "    fig, axs = plt.subplots(1, 4, squeeze=False, sharey=True)\n",
+    "    fig.set_size_inches(20, 5)\n",
     "    #plot_df_matrix(row.df_dist, row.df_freq, df_norm[i], ax=axs[0, i], min_freq=min_freq, max_freq=max_freq, vmin=1e-3, vmax=3)\n",
     "    ax, im = plot_df_matrix(row.df_dist, row.df_freq, df_exp, ax=axs[0, 0], \n",
     "                   min_freq=min_freq, max_freq=max_freq, vmin=min_value, vmax=max_value)\n",
     "    add_colorbar(ax, im)\n",
-    "    ax, im = plot_df_matrix(row.df_dist, row.df_freq, df_the, ax=axs[0, 1], \n",
+    "    ax, im = plot_df_matrix(row.df_dist, row.df_freq, df_the[:, distances_idx], ax=axs[0, 1], \n",
     "                   min_freq=min_freq, max_freq=max_freq, vmin=min_value, vmax=max_value)\n",
     "    add_colorbar(ax, im)\n",
-    "    ax, im = plot_df_matrix(row.df_dist, row.df_freq, rel_error, ax=axs[0, 2], \n",
+    "    ax, im = plot_df_matrix(distances_grid, row.df_freq, df_the, ax=axs[0, 2], \n",
+    "                   min_freq=min_freq, max_freq=max_freq, vmin=min_value, vmax=max_value)\n",
+    "    add_colorbar(ax, im)\n",
+    "    ax, im = plot_df_matrix(row.df_dist, row.df_freq, rel_error, ax=axs[0, 3], \n",
     "                   min_freq=min_freq, max_freq=max_freq, vmin=-3, vmax=np.log10(3))\n",
     "    add_colorbar(ax, im)\n",
     "    axs[0, 0].set_title(f'{normalization}, experimental')\n",
@@ -649,20 +675,16 @@
    "outputs": [],
    "source": [
     "from simulation import get_freq_slice_theory\n",
-    "\n",
-    "max_distance = 50\n",
-    "distances_all = row.df_dist\n",
-    "distances_grid = distances_all[distances_all <= max_distance]\n",
     "#method_slice = ''\n",
     "method_slice = 'standardize' \n",
     "\n",
-    "chosen_methods = ['raw', 'calibration-online', 'standardize', 'theoretical'] \n",
+    "chosen_methods = ['raw', 'normalize', 'calibration-online', 'calibration-offline', 'standardize', 'theoretical'] \n",
     "#chosen_methods = ['raw', 'standardize', 'theoretical'] \n",
     "#chosen_methods = results.normalization.unique() \n",
     "\n",
     "absolute_err_dict = {method:[] for method in chosen_methods}\n",
     "\n",
-    "distances = row.df_dist[row.df_dist < max(distances_grid)]\n",
+    "distances = row.df_dist[row.df_dist <= max_distance]\n",
     "for i_d, distance in enumerate(distances):\n",
     "    fig, axs = plt.subplots(1, len(chosen_mics), squeeze=False)\n",
     "    fig_cost, ax_cost = plt.subplots()\n",
@@ -676,18 +698,13 @@
     "        matrix_the = df.loc[df.data_type=='theoretical', 'matrix'].iloc[0]\n",
     "        \n",
     "        slice_exp = matrix_exp[..., i_d]\n",
-    "        slice_the = matrix_the[..., i_d]\n",
+    "        slice_the = matrix_the[..., distances_idx[i_d]]\n",
     "        \n",
     "        slice_exp = normalize_slice(slice_exp, method_slice)\n",
     "        slice_the = normalize_slice(slice_the, method_slice)\n",
     "        \n",
     "        costs = []\n",
-    "        for d in distances_grid:\n",
-    "            err = np.abs(d - row.df_dist)\n",
-    "            d_idx = np.argmin(err)\n",
-    "            if err[d_idx] > 1:\n",
-    "                print(f'Warning: big error {err[d_idx]}')\n",
-    "            \n",
+    "        for d_idx, d in enumerate(distances_grid):\n",
     "            slice_the_here = matrix_the[..., d_idx]\n",
     "            \n",
     "            # TODO(FD)can normalize slices here if we want...\n",
@@ -745,16 +762,19 @@
    "outputs": [],
    "source": [
     "from matplotlib.lines import Line2D\n",
-    "markers = list(Line2D.markers.keys()); i = 0\n",
+    "\n",
+    "markers = [m for m in list(Line2D.markers.keys()) if m not in ['.', '', ',']]\n",
+    "i = 0\n",
     "\n",
     "fig, axs = plt.subplots(1, 2, squeeze=False)\n",
     "fig.set_size_inches(15, 5)\n",
     "for method, absolute_errors in absolute_err_dict.items():\n",
-    "    axs[0, 0].plot(distances, absolute_errors, label=method, marker=markers[i], ls=':')\n",
+    "    markersize = 8-i\n",
+    "    axs[0, 0].plot(distances, absolute_errors, label=method, marker=markers[i], ls=':', markersize=markersize)\n",
     "    \n",
     "    xvals = sorted(absolute_errors)\n",
     "    yvals = np.linspace(0, 1, len(xvals))\n",
-    "    axs[0, 1].plot(xvals, yvals, label=method, marker=markers[i], ls=':')\n",
+    "    axs[0, 1].plot(xvals, yvals, label=method, marker=markers[i], ls=':', markersize=markersize)\n",
     "    i += 1\n",
     "    \n",
     "#axs[0, 0].set_yscale('log')\n",
